# wookie

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README
cmake/: locate_library.cmake
cmake/Modules/: Findcompact-language-detector-devel.cmake  Findelliptics.cmake  Findgrape.cmake  Findmsgpack.cmake
debian/: changelog
encodings/: cp1251  cp866  koi8r  utf8
httpserver/: CMakeLists.txt  server.cpp
include/wookie/: application.hpp  basic_elliptics_splitter.hpp  dir.hpp  dmanager.hpp  document.hpp  engine.hpp  hash.hpp  iconv.hpp  index_data.hpp  lang_detect.hpp  lexical_cast.hpp  ngram.hpp  operators.hpp  parser.hpp  score.hpp  split.hpp  storage.hpp  tfidf.hpp  timer.hpp  url.hpp
lib/: CMakeLists.txt  basic_elliptics_splitter.cpp  dmanager.cpp  document.cpp  engine.cpp  index_data.cpp  operators.cpp  parser.cpp  split.cpp  storage.cpp  url.cpp
processors/: CMakeLists.txt  README.md  feature_extractor.cpp  first_processor.cpp  html_processor.cpp  last_processor.cpp  recovery.cpp  stub_processor.cpp
src/: CMakeLists.txt
src/stem/: CMakeLists.txt
src/stem/include/stem/: stem.hpp
src/stem/src/: stem.cpp
src/test/: CMakeLists.txt  stem_test.cpp
stem/: CMakeLists.txt
stem/include/stem/: stem.hpp
test/: CMakeLists.txt  dlib.hpp  document_reader.cpp  elliptics.hpp  elliptics_load_docs.cpp  elliptics_parse_docs.cpp  encoding.cpp  feed_pipeline.cpp  fuzzy.cpp  html_parser.cpp  iterator.cpp  rindex.cpp  simdoc.hpp  similarity.cpp  similarity.hpp  stem_test.cpp  swarm.cpp
test/similarity/: CMakeLists.txt  dlib.hpp  elliptics_load_docs.cpp  elliptics_parse_docs.cpp  html_parser.cpp  simdoc.hpp  similarity.hpp
